--- a/src/main/resources/pl/pkubicki/primary.fxml
+++ b/src/main/resources/pl/pkubicki/primary.fxml
@@ -1,28 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.text.Text?>
 
-<GridPane fx:controller="pl.pkubicki.PrimaryController" xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10" styleClass="root">
-   <padding><Insets top="25" right="25" bottom="10" left="25"/></padding>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+
+<GridPane alignment="center" hgap="10" styleClass="root" vgap="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.pkubicki.PrimaryController">
+   <padding><Insets bottom="10" left="25" right="25" top="25" /></padding>
    <gridLinesVisible>true</gridLinesVisible>
-   <Text id="welcome-text" text="Path Player 1.0 Welcome"
-         GridPane.columnIndex="0" GridPane.rowIndex="0"
-         GridPane.columnSpan="2"/>
+   <Text id="welcome-text" text="Path Player 1.0 Welcome" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="0" />
    <HBox GridPane.columnIndex="0" GridPane.rowIndex="1">
-      <Button fx:id="loadButton" text="Load Ontology" onAction="#showOwl"/>
+      <Button fx:id="loadButton" onAction="#showOwl" prefHeight="25.0" prefWidth="113.0" text="Load Ontology" />
    </HBox>
    <HBox GridPane.columnIndex="1" GridPane.rowIndex="1">
-      <Button fx:id="saveButton" text="Save Ontology" onAction="#saveOwl"/>
+      <Button fx:id="saveButton" onAction="#saveOwl" text="Save Ontology" />
    </HBox>
 <HBox GridPane.columnIndex="0" GridPane.rowIndex="2">
-   <Button fx:id="loadTestOwl" text="Load TestOWL" onAction="#loadTestOWL"/>
+   <Button fx:id="loadTestOwl" onAction="#loadTestOWL" text="Load TestOWL" />
 </HBox>
    <HBox GridPane.columnIndex="0" GridPane.rowIndex="2">
-      <Button fx:id="emptyOwl" text="Create EmptyOWL" onAction="#createEmptyOWL"/>
+      <Button fx:id="emptyOwl" onAction="#createEmptyOWL" text="Create EmptyOWL" />
    </HBox>
+   <HBox GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <Button fx:id="addPoi" onAction="#openUploadForm" prefHeight="25.0" prefWidth="94.0" text="Add POI" />
+   </HBox>
+   <columnConstraints>
+      <ColumnConstraints />
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+   </rowConstraints>
+
 </GridPane>
