add: class with static utility methods, api for gps coordinates calculations, tested finding coordinates in given proximity

--- a/src/main/resources/pl/pkubicki/addpoiform.fxml
+++ b/src/main/resources/pl/pkubicki/addpoiform.fxml
@@ -33,6 +33,7 @@
         <Button onAction="#selectFile" text="Open File" />
     </HBox>
     <HBox alignment="bottom_right" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="4">
+      <Button mnemonicParsing="false" text="List prox POI" onAction="#generateProximityList" />
         <Button onAction="#submitNewPoiButton" text="Submit POI" />
     </HBox>
     <Text fx:id="submitStatus" GridPane.columnIndex="1" GridPane.rowIndex="5" />
