feat: free travel -> search option with geolocation, text to gps coords and reverse, create list of points in vicinity of selected point from ontology project management: import optimization, new folders for fxml, properties, PrimaryController and SecondaryController moved to controllers package

--- a/src/main/resources/pl/pkubicki/fxml/addpoiform.fxml
+++ b/src/main/resources/pl/pkubicki/fxml/addpoiform.fxml
@@ -29,7 +29,7 @@
     </HBox>
     <Text fx:id="submitStatus" GridPane.columnIndex="1" GridPane.rowIndex="5" />
     <stylesheets>
-        <URL value="@css/AddPoiForm.css" />
+        <URL value="@../css/AddPoiForm.css" />
     </stylesheets>
    <columnConstraints>
       <ColumnConstraints />
