--- a/src/main/resources/pl/pkubicki/fxml/freetravel.fxml
+++ b/src/main/resources/pl/pkubicki/fxml/freetravel.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -108,6 +109,30 @@
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
          </Button>
+         <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
+           <columnConstraints>
+             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+           </columnConstraints>
+           <rowConstraints>
+             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+           </rowConstraints>
+            <children>
+               <Button fx:id="buttonPlay" mnemonicParsing="false" onAction="#playAudio" prefHeight="40.0" prefWidth="40.0" styleClass="play" text="|&gt;" GridPane.halignment="CENTER">
+                  <GridPane.margin>
+                     <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                  </GridPane.margin></Button>
+               <Button fx:id="buttonPause" mnemonicParsing="false" onAction="#pauseAudio" prefHeight="40.0" prefWidth="40.0" styleClass="pause" text="||" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                  <GridPane.margin>
+                     <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                  </GridPane.margin></Button>
+               <Button fx:id="buttonStop" mnemonicParsing="false" onAction="#stopAudio" prefHeight="40.0" prefWidth="40.0" styleClass="stop" text="[x]" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                  <GridPane.margin>
+                     <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                  </GridPane.margin></Button>
+            </children>
+         </GridPane>
       </children>
    </GridPane>
    <GridPane GridPane.rowIndex="8">
@@ -130,10 +155,12 @@
    </GridPane>
    <Label text="POI's in vicinity:" GridPane.columnIndex="2" GridPane.rowIndex="7" GridPane.valignment="BOTTOM" />
 
-   <TextArea fx:id="currentLocationText" wrapText="true" editable="false" maxHeight="80.0" maxWidth="400.0" prefHeight="80.0" prefWidth="400.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+   <TextArea fx:id="currentLocationText" editable="false" maxHeight="80.0" maxWidth="400.0" prefHeight="80.0" prefWidth="400.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="7" />
    <Label text="Current location:" GridPane.rowIndex="7" />
    <ListView fx:id="proximityListView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="8" />
-
+    <stylesheets>
+        <URL value="@../css/FreeTravel.css" />
+    </stylesheets>
    <columnConstraints>
       <ColumnConstraints maxWidth="125.0" minWidth="100.0" prefWidth="100.0" />
       <ColumnConstraints maxWidth="472.0" minWidth="400.0" prefWidth="400.0" />
