--- a/src/main/resources/pl/pkubicki/fxml/FreeTravel.fxml
+++ b/src/main/resources/pl/pkubicki/fxml/FreeTravel.fxml
@@ -7,7 +7,7 @@
 
 <GridPane alignment="center" hgap="10" styleClass="root" vgap="10" xmlns="http://javafx.com/javafx/8.0.271" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.pkubicki.controllers.FreeTravelController">
     <padding><Insets bottom="10" left="25" right="25" top="25" /></padding>
-    <gridLinesVisible>true</gridLinesVisible>
+<!--    <gridLinesVisible>true</gridLinesVisible>-->
     <Label text="Search:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
 
     <TextField fx:id="searchText" prefWidth="400.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
