--- a/src/main/resources/pl/pkubicki/fxml/Primary.fxml
+++ b/src/main/resources/pl/pkubicki/fxml/Primary.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import java.net.URL?>
-<GridPane hgap="10" vgap="10" alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1" styleClass="root" xmlns="http://javafx.com/javafx/8.0.271" fx:controller="pl.pkubicki.controllers.PrimaryController">
-   <padding><Insets bottom="10" left="25" right="25" top="25" /></padding>
+
+<GridPane alignment="CENTER" hgap="20" styleClass="root" vgap="20" xmlns="http://javafx.com/javafx/8.0.271" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.pkubicki.controllers.PrimaryController">
+   <padding><Insets bottom="25" left="25" right="25" top="25" /></padding>
    <gridLinesVisible>true</gridLinesVisible>
    <Text id="welcome-text" text="Path Player 1.0 Welcome" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="0" />
 <HBox GridPane.columnIndex="0" GridPane.rowIndex="1">
@@ -29,6 +30,7 @@
       <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
+      <RowConstraints />
       <RowConstraints />
       <RowConstraints />
       <RowConstraints />
