--- a/src/main/resources/pl/pkubicki/fxml/FreeTravel.fxml
+++ b/src/main/resources/pl/pkubicki/fxml/FreeTravel.fxml
@@ -32,7 +32,7 @@
      <Button fx:id="createPoiListButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#createProximityListWithLabels" prefHeight="25.0" prefWidth="373.0" text="Create POI list in vicinity" GridPane.columnIndex="1" GridPane.rowIndex="6" />
      <Button fx:id="searchButton" onAction="#searchButtonHandler" text="Search" GridPane.columnIndex="2" />
    <Label text="Start Point:" GridPane.rowIndex="5" />
-   <Button fx:id="checkButton" mnemonicParsing="false" onAction="#makeStartPoiFromGps" text="Check" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+   <Button fx:id="checkButton" mnemonicParsing="false" onAction="#makeStartPointFromGps" text="Check" GridPane.columnIndex="2" GridPane.rowIndex="5" />
    <GridPane GridPane.columnIndex="1" GridPane.rowIndex="8">
      <columnConstraints>
        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
