--- a/src/main/resources/pl/pkubicki/fxml/OwlPanel.fxml
+++ b/src/main/resources/pl/pkubicki/fxml/OwlPanel.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane alignment="center" hgap="10" styleClass="root" vgap="10" xmlns="http://javafx.com/javafx/8.0.271" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.pkubicki.controllers.AddPoiController">
+<GridPane alignment="center" hgap="10" styleClass="root" vgap="10" xmlns="http://javafx.com/javafx/8.0.271" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.pkubicki.controllers.OwlPanelController">
     <padding><Insets bottom="10" left="25" right="25" top="25" /></padding>
     <gridLinesVisible>true</gridLinesVisible>
-    <Text id="addpoi-welcome-text" text="Add a new POI:" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="0" />
+    <Text id="welcome-text" text="OWL PANEL" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="0" />
 
     <Label text="Latitude:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
 
@@ -29,7 +29,7 @@
     </HBox>
     <Text fx:id="submitStatus" GridPane.columnIndex="1" GridPane.rowIndex="5" />
     <stylesheets>
-        <URL value="@../css/AddPoiForm.css" />
+        <URL value="@../css/BasicStyle.css" />
     </stylesheets>
    <columnConstraints>
       <ColumnConstraints />
